force-app/main/default/objects/Account/fields/CWS_Target_Acct_Type__c.field-meta.xml
<CustomField>
    <fullName>CWS_Target_Acct_Type__c</fullName>
    <label>Target Acct Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>APAC Acquisition</fullName>
            </value>
            <value>
                <fullName>APAC Expansion Security</fullName>
            </value>
            <value>
                <fullName>APAC Expansion UMM &amp; BMS</fullName>
            </value>
            <value>
                <fullName>BDR APAC Acquisition</fullName>
            </value>
            <value>
                <fullName>BDR APAC Expansion Security</fullName>
            </value>
            <value>
                <fullName>BDR APAC Expansion UMM &amp; BMS</fullName>
            </value>
            <value>
                <fullName>BDR EMEA Acquisition</fullName>
            </value>
            <value>
                <fullName>BDR EMEA Expansion Security</fullName>
            </value>
            <value>
                <fullName>BDR EMEA Expansion UMM &amp; BMS</fullName>
            </value>
            <value>
                <fullName>BDR NA Acquisition Core</fullName>
            </value>
            <value>
                <fullName>BDR NA Acquisition IIT</fullName>
            </value>
            <value>
                <fullName>BDR NA Acquisition Strategic</fullName>
            </value>
            <value>
                <fullName>BDR NA Expansion Security</fullName>
            </value>
            <value>
                <fullName>BDR NA Expansion UMM &amp; BMS</fullName>
            </value>
            <value>
                <fullName>Digital</fullName>
                <isActive>false</isActive>
                <label>Digital</label>
            </value>
            <value>
                <fullName>EMEA Acquisition Core</fullName>
            </value>
            <value>
                <fullName>EMEA Acquisition IIT</fullName>
            </value>
            <value>
                <fullName>EMEA Acquisition Strategic</fullName>
            </value>
            <value>
                <fullName>EMEA Expansion Security</fullName>
            </value>
            <value>
                <fullName>EMEA Expansion UMM &amp; BMS</fullName>
            </value>
            <value>
                <fullName>NA Acquisition Core</fullName>
            </value>
            <value>
                <fullName>NA Acquisition IIT</fullName>
            </value>
            <value>
                <fullName>NA Acquisition ISAC</fullName>
            </value>
            <value>
                <fullName>NA Acquisition OT</fullName>
            </value>
            <value>
                <fullName>NA Acquisition Strategic</fullName>
            </value>
            <value>
                <fullName>NA Expansion IIT</fullName>
            </value>
            <value>
                <fullName>NA Expansion Security</fullName>
            </value>
            <value>
                <fullName>NA Expansion UMM &amp; BMS</fullName>
            </value>
            <value>
                <fullName>Target</fullName>
                <isActive>false</isActive>
                <label>Target</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>