force-app/main/default/objects/Account/fields/CWS_Termination_Reason__c.field-meta.xml
<CustomField>
    <fullName>CWS_Termination_Reason__c</fullName>
    <inlineHelpText>Indicates reason for termination if Partner Account is terminated.</inlineHelpText>
    <label>Termination Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>Consulting</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
            <value>
                <fullName>Product Concerns</fullName>
            </value>
            <value>
                <fullName>Business Reasons</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>