force-app/main/default/objects/Account/fields/CWS_Termination_Sub_reason__c.field-meta.xml
<CustomField>
    <fullName>CWS_Termination_Sub_reason__c</fullName>
    <inlineHelpText>Indicates sub-reason for termination if Partner Account is terminated, based on termination reason.</inlineHelpText>
    <label>Termination Sub-reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CWS_Termination_Reason__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AM Not Engaged</fullName>
            </value>
            <value>
                <fullName>Billing Expectations</fullName>
            </value>
            <value>
                <fullName>Feels Misled</fullName>
            </value>
            <value>
                <fullName>Imp Misrepresented</fullName>
            </value>
            <value>
                <fullName>Missing Feature</fullName>
            </value>
            <value>
                <fullName>Imp Not Helpful</fullName>
            </value>
            <value>
                <fullName>Imp Scheduling</fullName>
            </value>
            <value>
                <fullName>Installation</fullName>
            </value>
            <value>
                <fullName>Not Enough Imp Hours</fullName>
            </value>
            <value>
                <fullName>Time to Implement</fullName>
            </value>
            <value>
                <fullName>Unhappy with Imp Consultant</fullName>
            </value>
            <value>
                <fullName>University Training</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>No Continued Education</fullName>
            </value>
            <value>
                <fullName>Project Issues</fullName>
            </value>
            <value>
                <fullName>Unhappy With Consultant</fullName>
            </value>
            <value>
                <fullName>Expectations</fullName>
            </value>
            <value>
                <fullName>Follow Up</fullName>
            </value>
            <value>
                <fullName>Long Response/Resolution Times</fullName>
            </value>
            <value>
                <fullName>Not Helpful</fullName>
            </value>
            <value>
                <fullName>Procedures</fullName>
            </value>
            <value>
                <fullName>Support Offering Pricing</fullName>
            </value>
            <value>
                <fullName>Agreements/Invoicing/Acct Integrations</fullName>
            </value>
            <value>
                <fullName>Company &amp; Contacts</fullName>
            </value>
            <value>
                <fullName>Configurations</fullName>
            </value>
            <value>
                <fullName>Defects</fullName>
            </value>
            <value>
                <fullName>Marketing Manager</fullName>
            </value>
            <value>
                <fullName>Procurement</fullName>
            </value>
            <value>
                <fullName>Projects</fullName>
            </value>
            <value>
                <fullName>Reliability Issues</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>