force-app/main/default/objects/Account/fields/CWS_Territory__c.field-meta.xml
<CustomField>
    <fullName>CWS_Territory__c</fullName>
    <inlineHelpText>Populates the assigned Territory based on the Account&apos;s address.</inlineHelpText>
    <label>Territory</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CWS_Territory</valueSetName>
    </valueSet>
</CustomField>