force-app/main/default/objects/Account/fields/CWS_Top50Account__c.field-meta.xml
<CustomField>
    <fullName>CWS_Top50Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates this is a top 50 account - used with component visibility in lightning record pages</description>
    <label>Top 50 Account</label>
    <type>Checkbox</type>
</CustomField>