force-app/main/default/objects/Account/fields/CWS_Total_Endpoints__c.field-meta.xml
<CustomField>
    <fullName>CWS_Total_Endpoints__c</fullName>
    <formula>nullvalue(CWS_No_of_Servers_Managed__c,0) + nullvalue( CWS_No_of_Workstations__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total of # of Workstations plus # of Servers Managed</inlineHelpText>
    <label>Total Endpoints</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>