force-app/main/default/objects/Account/fields/CWS_VAT_Number__c.field-meta.xml
<CustomField>
    <fullName>CWS_VAT_Number__c</fullName>
    <inlineHelpText>Indicates the Value Added Tax (VAT) number for the Account.</inlineHelpText>
    <label>VAT Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>