force-app/main/default/objects/Account/fields/CWS_Vendor_Type__c.field-meta.xml
<CustomField>
    <fullName>CWS_Vendor_Type__c</fullName>
    <label>Vendor Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CWS_Partner_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vendor - Resold</fullName>
            </value>
            <value>
                <fullName>Vendor - Invent Platinum</fullName>
            </value>
            <value>
                <fullName>Vendor - Invent Gold</fullName>
            </value>
            <value>
                <fullName>Vendor - Open Integrator</fullName>
            </value>
            <value>
                <fullName>Vendor - Competitor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>