force-app/main/default/objects/Account/fields/CWS_ZI_All_Industries__c.field-meta.xml
<CustomField>
    <fullName>CWS_ZI_All_Industries__c</fullName>
    <description>Comma-separated list of all industries that ZI has on the account</description>
    <label>ZI All Industries</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>