force-app/main/default/objects/Account/fields/CWS_ZI_Certification_Date__c.field-meta.xml
<CustomField>
    <fullName>CWS_ZI_Certification_Date__c</fullName>
    <description>Last time we either saw email activity or manually confirmed company is in business</description>
    <label>ZI Certification Date</label>
    <type>DateTime</type>
</CustomField>