force-app/main/default/objects/Account/fields/CWS_ZI_Certified_Active_Company__c.field-meta.xml
<CustomField>
    <fullName>CWS_ZI_Certified_Active_Company__c</fullName>
    <description>Yes or no value which denotes if ZoomInfo&apos;s research and data team has confirmed activity within the past 12 months</description>
    <label>ZI Certified Active Company</label>
    <length>20</length>
    <type>Text</type>
</CustomField>