force-app/main/default/objects/Account/fields/CWS_ZI_City__c.field-meta.xml
<CustomField>
    <fullName>CWS_ZI_City__c</fullName>
    <description>City of the company&apos;s primary address</description>
    <label>ZI City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>