force-app/main/default/objects/Account/fields/CWS_ZI_Company_IsDefunct__c.field-meta.xml
<CustomField>
    <fullName>CWS_ZI_Company_IsDefunct__c</fullName>
    <description>Indicates whether the company still exists</description>
    <label>ZI Company IsDefunct</label>
    <length>20</length>
    <type>Text</type>
</CustomField>