force-app/main/default/objects/Account/fields/CWS_ZI_Company_LinkedIn_URL__c.field-meta.xml
<CustomField>
    <fullName>CWS_ZI_Company_LinkedIn_URL__c</fullName>
    <description>LinkedIn URL of the company</description>
    <label>ZI Company LinkedIn URL</label>
    <type>Url</type>
</CustomField>