force-app/main/default/objects/Account/fields/CWS_ZI_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>CWS_ZI_Company_Name__c</fullName>
    <description>Name of the person&apos;s current company</description>
    <label>ZI Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>