force-app/main/default/objects/Account/fields/CWS_ZI_Company_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>CWS_ZI_Company_Phone_Number__c</fullName>
    <description>Phone number of the company headquarters.</description>
    <label>ZI Company Phone Number</label>
    <type>Phone</type>
</CustomField>