force-app/main/default/objects/Account/fields/CWS_ZI_Company_Type__c.field-meta.xml
<CustomField>
    <fullName>CWS_ZI_Company_Type__c</fullName>
    <description>Whether company is private or public</description>
    <label>ZI Company Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>