force-app/main/default/objects/Account/fields/CWS_ZI_CompanyID__c.field-meta.xml
<CustomField>
    <fullName>CWS_ZI_CompanyID__c</fullName>
    <description>Unique identifier used by ZoomInfo for company</description>
    <externalId>true</externalId>
    <label>ZI CompanyID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>