force-app/main/default/objects/Account/fields/CWS_ZI_Country__c.field-meta.xml
<CustomField>
    <fullName>CWS_ZI_Country__c</fullName>
    <description>Country of the company&apos;s primary address</description>
    <label>ZI Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>