force-app/main/default/objects/Account/fields/CWS_ZI_Employee_Range__c.field-meta.xml
<CustomField>
    <fullName>CWS_ZI_Employee_Range__c</fullName>
    <description>Approximate range for the number of contacts employed by the company</description>
    <label>ZI Employee Range</label>
    <length>255</length>
    <type>Text</type>
</CustomField>