force-app/main/default/objects/Account/fields/CWS_ZI_Enrich_Status__c.field-meta.xml
<CustomField>
    <fullName>CWS_ZI_Enrich_Status__c</fullName>
    <description>Enrichment status of the record</description>
    <label>ZI Enrich Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>