force-app/main/default/objects/Account/fields/CWS_ZI_First_Updated__c.field-meta.xml
<CustomField>
    <fullName>CWS_ZI_First_Updated__c</fullName>
    <description>Date and time when the record was first created or updated by ZoomInfo</description>
    <label>ZI First Updated</label>
    <type>DateTime</type>
</CustomField>