force-app/main/default/objects/Account/fields/CWS_ZI_Industry__c.field-meta.xml
<CustomField>
    <fullName>CWS_ZI_Industry__c</fullName>
    <label>ZI Industry</label>
    <length>100</length>
    <type>Text</type>
</CustomField>