force-app/main/default/objects/Account/fields/CWS_ZI_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>CWS_ZI_Last_Updated__c</fullName>
    <description>Date and time when enrich tool ran last time</description>
    <label>ZI Last Updated</label>
    <type>DateTime</type>
</CustomField>