force-app/main/default/objects/Account/fields/CWS_ZI_NAICS_Code__c.field-meta.xml
<CustomField>
    <fullName>CWS_ZI_NAICS_Code__c</fullName>
    <description>The company North American Industry Classification System (NAICS)</description>
    <label>ZI NAICS Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>