force-app/main/default/objects/Account/fields/CWS_ZI_Number_Of_Employees__c.field-meta.xml
<CustomField>
    <fullName>CWS_ZI_Number_Of_Employees__c</fullName>
    <description>Employee head count for the company</description>
    <label>ZI Number Of Employees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>