force-app/main/default/objects/Account/fields/CWS_ZI_Number_Of_Locations__c.field-meta.xml
<CustomField>
    <fullName>CWS_ZI_Number_Of_Locations__c</fullName>
    <label>ZI Number Of Locations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>