force-app/main/default/objects/Account/fields/CWS_ZI_Parent_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>CWS_ZI_Parent_Company_Name__c</fullName>
    <description>Company&apos;s parent company name</description>
    <label>ZI Parent Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>