force-app/main/default/objects/Account/fields/CWS_ZI_Parent_Company_ZoomInfo_ID__c.field-meta.xml
<CustomField>
    <fullName>CWS_ZI_Parent_Company_ZoomInfo_ID__c</fullName>
    <description>Company&apos;s parent ZoomInfo Company ID</description>
    <label>ZI Parent Company ZoomInfo ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>