force-app/main/default/objects/Account/fields/CWS_ZI_Primary_Sub_Industry__c.field-meta.xml
<CustomField>
    <fullName>CWS_ZI_Primary_Sub_Industry__c</fullName>
    <description>Second level industry</description>
    <label>ZI Primary Sub-Industry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>