force-app/main/default/objects/Account/fields/CWS_ZI_Products_Services__c.field-meta.xml
<CustomField>
    <fullName>CWS_ZI_Products_Services__c</fullName>
    <label>ZI Products &amp; Services</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>