force-app/main/default/objects/Account/fields/CWS_ZI_Record_Purchased_Date__c.field-meta.xml
<CustomField>
    <fullName>CWS_ZI_Record_Purchased_Date__c</fullName>
    <description>Date that the record was placed under management</description>
    <label>ZI Record Purchased Date</label>
    <type>DateTime</type>
</CustomField>