force-app/main/default/objects/Account/fields/CWS_ZI_Revenue__c.field-meta.xml
<CustomField>
    <fullName>CWS_ZI_Revenue__c</fullName>
    <description>Numeric annual gross revenue for the company in 1000&apos;s</description>
    <label>ZI Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>