force-app/main/default/objects/Account/fields/CWS_ZI_Revenue_Range__c.field-meta.xml
<CustomField>
    <fullName>CWS_ZI_Revenue_Range__c</fullName>
    <description>Estimated range of annual revenue</description>
    <label>ZI Revenue Range</label>
    <length>255</length>
    <type>Text</type>
</CustomField>