force-app/main/default/objects/Account/fields/CWS_ZI_Segmentation_Complexity__c.field-meta.xml
<CustomField>
    <fullName>CWS_ZI_Segmentation_Complexity__c</fullName>
    <description>Capture the Complexity Score of the company</description>
    <label>ZI Segmentation Complexity %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>