force-app/main/default/objects/Account/fields/CWS_ZI_Segmentation_Value_Number__c.field-meta.xml
<CustomField>
    <fullName>CWS_ZI_Segmentation_Value_Number__c</fullName>
    <description>Capture the Value Score of the company</description>
    <label>ZI Segmentation Value Number %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>