force-app/main/default/objects/Account/fields/CWS_ZI_SIC_Code__c.field-meta.xml
<CustomField>
    <fullName>CWS_ZI_SIC_Code__c</fullName>
    <description>The company Standard Industry Code (SIC)</description>
    <label>ZI SIC Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>