force-app/main/default/objects/Account/fields/CWS_ZI_State__c.field-meta.xml
<CustomField>
    <fullName>CWS_ZI_State__c</fullName>
    <description>State of the company&apos;s primary address</description>
    <label>ZI State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>