force-app/main/default/objects/Account/fields/CWS_ZI_Street__c.field-meta.xml
<CustomField>
    <fullName>CWS_ZI_Street__c</fullName>
    <description>Street of the company&apos;s primary address</description>
    <label>ZI Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>