force-app/main/default/objects/Account/fields/CWS_ZI_Technologies__c.field-meta.xml
<CustomField>
    <fullName>CWS_ZI_Technologies__c</fullName>
    <label>ZI Technologies</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>