force-app/main/default/objects/Account/fields/CWS_ZI_Ticker__c.field-meta.xml
<CustomField>
    <fullName>CWS_ZI_Ticker__c</fullName>
    <description>The company&apos;s stock exchange and ticker</description>
    <label>ZI Ticker</label>
    <length>255</length>
    <type>Text</type>
</CustomField>