force-app/main/default/objects/Account/fields/CWS_ZI_Ultimate_Parent_Company_ID__c.field-meta.xml
<CustomField>
    <fullName>CWS_ZI_Ultimate_Parent_Company_ID__c</fullName>
    <label>ZI Ultimate Parent Company ZoomInfo ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>