force-app/main/default/objects/Account/fields/CWS_ZI_Website__c.field-meta.xml
<CustomField>
    <fullName>CWS_ZI_Website__c</fullName>
    <description>URL to the company website in http://www.example.com format</description>
    <label>ZI Website</label>
    <type>Url</type>
</CustomField>