force-app/main/default/objects/Account/fields/CWS_ZI_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>CWS_ZI_Zip_Code__c</fullName>
    <label>ZI Zip Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>