force-app/main/default/objects/Account/fields/CWS_Zuora_Error__c.field-meta.xml
<CustomField>
    <fullName>CWS_Zuora_Error__c</fullName>
    <inlineHelpText>Indicates issues with Account integrations between Salesforce and Zuora. If there is any issue with an Account related integration the corresponding error message is populated in this field.</inlineHelpText>
    <label>Zuora Integration Error</label>
    <type>TextArea</type>
</CustomField>