force-app/main/default/objects/Account/fields/descartesdps__HasBeenFlaggedByDPS__c.field-meta.xml
<CustomField>
    <fullName>descartesdps__HasBeenFlaggedByDPS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HasBeenFlaggedByDPS</label>
    <type>Checkbox</type>
</CustomField>