force-app/main/default/objects/Account/fields/EndOfSurge__c.field-meta.xml
<CustomField>
    <fullName>EndOfSurge__c</fullName>
    <label>Last Spike</label>
    <type>Date</type>
</CustomField>