force-app/main/default/objects/Account/fields/HighestSurgePercent__c.field-meta.xml
<CustomField>
    <fullName>HighestSurgePercent__c</fullName>
    <label>Spike Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>