force-app/main/default/objects/Account/fields/LastAdClickDate__c.field-meta.xml
<CustomField>
    <fullName>LastAdClickDate__c</fullName>
    <label>Last Ad Click Date</label>
    <type>Date</type>
</CustomField>