force-app/main/default/objects/Account/fields/LastUniqueVisitorsSnapshot__c.field-meta.xml
<CustomField>
    <fullName>LastUniqueVisitorsSnapshot__c</fullName>
    <label>People on Site (30 Day Snapshot)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>