force-app/main/default/objects/Account/fields/LastVisitMoment__c.field-meta.xml
<CustomField>
    <fullName>LastVisitMoment__c</fullName>
    <label>Last Visit Date</label>
    <type>Date</type>
</CustomField>