force-app/main/default/objects/Account/fields/LastVisitSessionsSnapshot__c.field-meta.xml
<CustomField>
    <fullName>LastVisitSessionsSnapshot__c</fullName>
    <label>Web Visits (30 Day Snapshot)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>