force-app/main/default/objects/Account/fields/no_of_workstations_servers_managed__c.field-meta.xml
<CustomField>
    <fullName>no_of_workstations_servers_managed__c</fullName>
    <label>no of workstations servers managed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>