force-app/main/default/objects/Account/fields/R1Soft_Manage_Username__c.field-meta.xml
<CustomField>
    <fullName>R1Soft_Manage_Username__c</fullName>
    <inlineHelpText>Captures username updated by Sales and is also on the R1Soft Manage Portal.</inlineHelpText>
    <label>R1Soft Manage Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>