force-app/main/default/objects/Account/fields/StartOfSurge__c.field-meta.xml
<CustomField>
    <fullName>StartOfSurge__c</fullName>
    <label>Spike Start</label>
    <type>Date</type>
</CustomField>