force-app/main/default/objects/Account/fields/Surge_Heat__c.field-meta.xml
<CustomField>
    <fullName>Surge_Heat__c</fullName>
    <formula>IF( (HighestSurgePercent__c = 0 &amp;&amp; ISBLANK(EndOfSurge__c)) ,
IMAGE(&quot;/resource/pepper0&quot;, &quot;0 peppers&quot;, 20, 50),
IF( HighestSurgePercent__c &lt;1, 
IMAGE(&quot;/resource/pepper1&quot;, &quot;1 pepper&quot;, 20, 50),
IF( HighestSurgePercent__c &lt;2.50,
IMAGE(&quot;/resource/pepper2&quot;, &quot;2 peppers&quot;, 20, 50),
IF( HighestSurgePercent__c &lt;100,
IMAGE(&quot;/resource/pepper3&quot;, &quot;3 peppers&quot;, 20, 50),
&quot;N/A&quot;)
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Spike Heat</label>
    <type>Text</type>
</CustomField>