force-app/main/default/objects/Account/fields/SurgeDataUpToDateAsOf__c.field-meta.xml
<CustomField>
    <fullName>SurgeDataUpToDateAsOf__c</fullName>
    <label>Engagement Data As Of</label>
    <type>Date</type>
</CustomField>