force-app/main/default/objects/Account/fields/SurgingHighValuePages__c.field-meta.xml
<CustomField>
    <fullName>SurgingHighValuePages__c</fullName>
    <label>Most Visited High Value Pages</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>