force-app/main/default/objects/Account/fields/Target_Account__c.field-meta.xml
<CustomField>
    <fullName>Target_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Target account for lean data routing.</description>
    <inlineHelpText>Indicates if account is categorized as Target account</inlineHelpText>
    <label>Target Account</label>
    <type>Checkbox</type>
</CustomField>