force-app/main/default/objects/Account/fields/Target_Acct_Product__c.field-meta.xml
<CustomField>
    <fullName>Target_Acct_Product__c</fullName>
    <label>Target Acct Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Assist</fullName>
            </value>
            <value>
                <fullName>Automate</fullName>
            </value>
            <value>
                <fullName>BrightGauge</fullName>
            </value>
            <value>
                <fullName>Command</fullName>
            </value>
            <value>
                <fullName>Control</fullName>
            </value>
            <value>
                <fullName>CW RMM</fullName>
            </value>
            <value>
                <fullName>Fortify</fullName>
            </value>
            <value>
                <fullName>Identify</fullName>
            </value>
            <value>
                <fullName>ITBoost</fullName>
            </value>
            <value>
                <fullName>Manage</fullName>
            </value>
            <value>
                <fullName>Perch</fullName>
            </value>
            <value>
                <fullName>Recover</fullName>
            </value>
            <value>
                <fullName>Sell</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>