force-app/main/default/objects/Account/fields/TerminusAccountLists__c.field-meta.xml
<CustomField>
    <fullName>TerminusAccountLists__c</fullName>
    <label>Terminus Account Lists</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>