force-app/main/default/objects/Account/fields/TerminusAccountListsUpdatedMomentUtc__c.field-meta.xml
<CustomField>
    <fullName>TerminusAccountListsUpdatedMomentUtc__c</fullName>
    <label>Terminus Account Lists As Of</label>
    <type>DateTime</type>
</CustomField>