force-app/main/default/objects/Account/fields/Timezone_Gainsight__c.field-meta.xml
<CustomField>
    <fullName>Timezone_Gainsight__c</fullName>
    <formula>tz__Timezone_Full_F__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Timezone Gainsight</label>
    <type>Text</type>
</CustomField>