force-app/main/default/objects/Account/fields/Touch_Tier__c.field-meta.xml
<CustomField>
    <fullName>Touch_Tier__c</fullName>
    <description>Indicates which Touch Tier this account resides in.</description>
    <label>Touch Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Tech</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>