force-app/main/default/objects/Account/fields/tz__Timezone__c.field-meta.xml
<CustomField>
    <fullName>tz__Timezone__c</fullName>
    <description>Timezone abbreviation when DST is off (PST, EST, etc.). This is a hidden field and should not be added to the page layouts.</description>
    <inlineHelpText>Timezone abbreviation when DST is off (PST, EST, etc.). This is a hidden field and should not be added to the page layouts.</inlineHelpText>
    <label>Timezone Standard</label>
    <length>10</length>
    <type>Text</type>
</CustomField>