force-app/main/default/objects/Account/fields/tz__UTF_Offset__c.field-meta.xml
<CustomField>
    <fullName>tz__UTF_Offset__c</fullName>
    <description>UTC Offset when the DST is off. This is a hidden field and should not be added to the page layouts.</description>
    <inlineHelpText>UTC Offset when the DST is off. This is a hidden field and should not be added to the page layouts.</inlineHelpText>
    <label>UTC Offset Standard</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>