force-app/main/default/objects/Account/fields/tz_sync__c.field-meta.xml
<CustomField>
    <fullName>tz_sync__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Temporary field used to trigger the update of the Time Zone app.</description>
    <label>tz sync</label>
    <type>Checkbox</type>
</CustomField>