force-app/main/default/objects/Account/fields/WebVisitDataUpToDateAsOf__c.field-meta.xml
<CustomField>
    <fullName>WebVisitDataUpToDateAsOf__c</fullName>
    <label>Web Visit Date Updated</label>
    <type>Date</type>
</CustomField>